# git-env

./: .gitignore  LICENCE  README.md  implement.sh  pyproject.toml  spec.md
.github/assets/: man-reading-the-mail-768.png.credit
.github/workflows/: ci.yml
man/: git-env-sync.1  git-env.1
src/git_env/: __init__.py  _argparser.py  cli.py  config.py  discovery.py  output.py  repo.py  shell_completions.py  sync.py
src/git_env/completions/: _git-env  git-env.bash  git-env.fish
tests/: conftest.py  test_completions.py  test_sync_harness.py
